
Package: PSCBS
==============

Version: 0.41.4 [2014-03-30]
o As an alternative to argument 'CT', segmentByPairedPSCBS() now accepts
  arguments 'thetaT' and 'thetaN', in case 'CT' is calculated as
  CT=2*thetaT/thetaN.


Version: 0.41.3 [2014-03-29]
o Methods no longer generates warnings on "in max(c(NA_integer_,
  NA_integer_), na.rm = TRUE) : no non-missing arguments to max;
  returning -Inf".
o BUG FIX: In rare cases, callROH() could throw "Error in if
  (is.na(delta)) { : argument is of length zero".


Version: 0.41.2 [2014-03-28]
o Added argument 'preserveScale' to segmentByPairedPSCBS(), which is
  passed as is to normalizeTumorBoost() with the default being TRUE
  corresponding to the previous default behavior.


Version: 0.41.1 [2014-03-28]
o Added unTumorBoost() to recalculating the segment means and other
  statistics for a given PairedPSCBS profile based on non-TumorBoosted
  tumor BAFs (rather than TumorBoost:ed tumor BAFs).


Version: 0.41.0 [2014-03-26]
o Now estimateKappaByC1Density() give more informative error messages
  if it failed to identify modes for estimating the parameter.
o Added argument 'from' to estimateKappaByC1Density().
o BUG FIX: updateMeansC1C2() for PairedPSCBS did not handle missing
  values (=splitters) in the 'c1c2Swap' field.
o BUG FIX: updateMeans() for PairedPSCBS and NonPairedPSCBS returned the
  incorrect DH segment levels for region in AB if adjustFor="ab" and
  likewise for segments in LOH if adjustFor="loh".  This bug does *not*
  affect any of PSCBS methods themselves, because none of them utilizes
  those 'adjustFor' options.
o Bumped up package dependencies.


Version: 0.40.4 [2014-02-04]
o BUG FIX: all.equal() for CBS would pass the first/dispatch argument
  to NextMethod() as 'target=target' and not as 'object=target', which
  would result in it being passed it twice both named and non-named
  where the latter would become argument 'tolerance=target' in an